Added media quries

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML5: The Basics</title>
   <link rel="stylesheet" href="styles.min.css">
   <!-- IE9 HTML5 Fix -->
@@ -175,7 +176,7 @@
           <h3><strong>&lt;backquote&gt;</strong></h3>
           <p>This tag is used to define and reference a full paragraph quote. This tag is very similar to the &lt;q&gt; tag but where the &lt;q&gt; is for short quotes, this tag is for full paragraph quote.</p>
           <div class="example-box">
-            <p>HTML:</p>
+            <p>HTML:</p><br>
             <div>&lt;backquote&gt;</div>
             <div class="indent">&lt;p&gt;</div>
             <div class="indent2">You've gotta dance like there's nobody &lt;br&gt;<br> watching, Love like you'll never be hurt, Sing like &lt;br&gt;<br> there's nobody listening, And live like it's heaven &lt;br&gt;<br> on earth. &ndash; William W. Purkey
