--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <h1>HTML5: The Basics</h1>
+    <h1>Website Coding Basics</h1>
     <nav>
       <ul>
         <li><a href="#wrap1html">HTML</a></li>
