Back to top button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <button onclick="topFunction()" id="myBtn" title="Go to top">&Uparrow;</button>
   <header>
     <h1>Website Coding Basics</h1>
     <nav>
@@ -32,8 +33,9 @@
 
         <section>
           <h3><strong>&lt;b&gt;</strong> and <strong>&lt;strong&gt;</strong></h3>
-          <p>Both of <these></these> tags will make text look bold. The second tag also describes a higher text importance than the first. Also, according to the HTML 5 specification, the <strong>&lt;b&gt;</strong> tag should only be used as a LAST resort
-            when no other tag is more appropriate.</p>
+          <p>Both of
+            <these></these> tags will make text look bold. The second tag also describes a higher text importance than the first. Also, according to the HTML 5 specification, the <strong>&lt;b&gt;</strong> tag should only be used as a LAST resort when no other
+            tag is more appropriate.</p>
           <div class="example-box">
             <p class="bottom-padding">HTML : &lt;b&gt;bold text&lt;&sol;b&gt;</p>
             <p>Result : <b>bold text</b></p>
@@ -42,8 +44,8 @@
 
         <section>
           <h3><strong>&lt;i&gt;</strong> and <strong>&lt;em&gt;</strong></h3>
-          <p>Both tags will make a text look italic. The second tag also describes a higher emphasis than the first. Also, according to the HTML 5 specification, the <strong>&lt;i&gt;</strong> tag should be only used as a LAST resort when no other
-            tag is more appropriate.</p>
+          <p>Both tags will make a text look italic. The second tag also describes a higher emphasis than the first. Also, according to the HTML 5 specification, the <strong>&lt;i&gt;</strong> tag should be only used as a LAST resort when no other tag is
+            more appropriate.</p>
           <div class="example-box">
             <p class="bottom-padding">HTML: &lt;i&gt;italic text&lt;&sol;i&gt; </p>
             <p>Result: <i>italic text</i></p>
@@ -83,7 +85,8 @@
 
         <section>
           <h3><strong>&lt;ins&gt;</strong></h3>
-          <p>This tag is to be used to notify users that some new text that has been additionally inserted into some other text. By default, the browsers display an underline to make the text stand out. As far as I have seen, this reason this the tag is often not seen compared to its counterpart &lt;del&gt;.</p>
+          <p>This tag is to be used to notify users that some new text that has been additionally inserted into some other text. By default, the browsers display an underline to make the text stand out. As far as I have seen, this reason this the tag is
+            often not seen compared to its counterpart &lt;del&gt;.</p>
           <div class="example-box">
             <p class="bottom-padding">HTML: &lt;ins&gt;Text&lt;ins&gt;</p>
             <p>Result: <ins>Text</ins></p>
@@ -101,7 +104,8 @@
 
         <section>
           <h3><strong>&lt;del&gt;</strong></h3>
-          <p>This tag is to be used on text that is to be displayed as deleted, but kept as a reference. This tag is usually used in blogs websites where the incorrect text is marked, but not deleted. Usually to show that the text was wrong, and corrected. The &lt;s&gt; and &lt;del&gt; tags display identically in the browser, the extra that they do is give more meanings to the screen readers which is important for serious websites.</p>
+          <p>This tag is to be used on text that is to be displayed as deleted, but kept as a reference. This tag is usually used in blogs websites where the incorrect text is marked, but not deleted. Usually to show that the text was wrong, and corrected.
+            The &lt;s&gt; and &lt;del&gt; tags display identically in the browser, the extra that they do is give more meanings to the screen readers which is important for serious websites.</p>
           <div class="example-box">
             <p class="bottom-padding">HTML: It was my &lt;del&gt;worst&lt;&sol;del&gt; idea.</p>
             <p>Result: It was my <del>worst</del> best idea.</p>
@@ -155,8 +159,8 @@
 
         <section>
           <h3><strong>&lt;dfn&gt;</strong></h3>
-          <p>This tag is used to explain new terminologies. They call it the defining instance of a new term. So if you have explained something like for example a hedge fund you would use this tag around that word. This will be used by screen readers,
-            most browsers would not do anything to the text itself, some would make the text italic.</p>
+          <p>This tag is used to explain new terminologies. They call it the defining instance of a new term. So if you have explained something like for example a hedge fund you would use this tag around that word. This will be used by screen readers, most
+            browsers would not do anything to the text itself, some would make the text italic.</p>
           <div class="example-box">
             <p class="bottom-padding">HTML: &lt;dfn&gt;Text&lt;&sol;dfn&gt;</p>
             <p>Result: <dfn title="Text">Text</dfn></p>
@@ -247,5 +251,7 @@
     <p> Tag definition for each tag was sourced from <a href="https://www.w3schools.com/tags/tag_sub.asp">here</a>.</p>
   </footer>
 </body>
+
+<script src="logic.js"></script>
 
 </html>
