Background image added, and media queries slightly improved.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <button onclick="topFunction()" id="myBtn" title="Go to top">&Uparrow;</button>
+  <button onclick="topFunction()" id="myBtn" title="Go to top">&utrif;</button>
   <header>
     <h1>Website Coding Basics</h1>
     <nav>
