--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML5: The Basics</title>
-  <link rel="stylesheet" href="styles.min.css">
+  <link rel="stylesheet" href="styles/css/styles.min.css">
   <!-- IE9 HTML5 Fix -->
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -21,6 +21,7 @@
         <li><a href="#wrap1html">HTML</a></li>
         <li><a href="#wrap2layout">Layout</a></li>
         <li><a href="#wrap3images">Images</a></li>
+        <li><a href="#wrap5forms">Lists</a></li>
         <li><a href="#wrap4tables">Tables</a></li>
         <li><a href="#wrap5forms">Forms</a></li>
       </ul>
@@ -220,7 +221,6 @@
             </div>
           </div>
         </section>
-
       </div>
     </div>
 
