More code comments

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>HTML5: The Basics</title>
+  <title>Website Coding Basics</title>
   <link rel="stylesheet" href="styles/css/styles.min.css">
   <!-- IE9 HTML5 Fix -->
   <!--[if lt IE 9]>
