Tweaked back to top button and added/updated code comments.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-  <button onclick="topFunction()" id="myBtn" title="Go to top">&utrif;</button>
   <header>
     <h1>Website Coding Basics</h1>
     <nav>
@@ -250,6 +249,7 @@
   <footer>
     <p> Tag definition for each tag was sourced from <a href="https://www.w3schools.com/tags/tag_sub.asp">here</a>.</p>
   </footer>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">TOP</button>
 </body>
 
 <script src="scripts/logic.js"></script>
