Small tweak to back-to-top button.

--- a/index.html
+++ b/index.html
@@ -246,10 +246,14 @@
     </div> -->
   </div>
 
+  <aside>
+    <button onclick="topFunction()" id="myBtn" alt="Go to top" href="#top">TOP</button>
+  </aside>
+
   <footer>
     <p> Tag definition for each tag was sourced from <a href="https://www.w3schools.com/tags/tag_sub.asp">here</a>.</p>
   </footer>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">TOP</button>
+
 </body>
 
 <script src="scripts/logic.js"></script>
