Added scss mixin for the hover and focus code. Commented the code too.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       </ul>
     </nav>
   </header>
+
   <div class="contentWrapper">
     <div id="wrap1html">
       <h2>Basic HTML Tags</h2>
@@ -220,8 +221,8 @@
             </div>
           </div>
         </article>
-      </div>
-    </div>
+      </div> <!-- subWrap ends -->
+    </div> <!-- wrap1html ends --> 
 
     <div id="wrap2layout">
       <h2>CSS: Layouts: Floats, Flexbox, CSS Grid</h2>
@@ -253,7 +254,6 @@
   <footer>
     <p> Tag definition for each tag was sourced from <a href="https://www.w3schools.com/tags/tag_sub.asp">here</a>.</p>
   </footer>
-
 </body>
 
 <script src="scripts/logic.js"></script>
