Added CSS animations to all hover/focus elements.

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           </div>
         </article>
       </div> <!-- subWrap ends -->
-    </div> <!-- wrap1html ends --> 
+    </div> <!-- wrap1html ends -->
 
     <div id="wrap2layout">
       <h2>CSS: Layouts: Floats, Flexbox, CSS Grid</h2>
@@ -231,8 +231,8 @@
           <h3></h3>
 
         </article>
-      </div>
-    </div>
+      </div> <!-- subWrap ends -->
+    </div> <!-- wrap2layout ends -->
 
     <!-- <div id="wrap3images">
       <h2>Images </h2>
