--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
   </div>
 
   <aside>
-    <button onclick="topFunction()" id="myBtn" alt="Go to top" href="#top">TOP</button>
+    <button onclick="topFunction()" id="bckBtn" alt="Go to top" href="#top">TOP</button>
   </aside>
 
   <footer>
