mobile menu implemented.

--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
 <body>
   <header>
     <h1>Website Coding Basics</h1>
-    <nav>
-      <ul>
-        <li><a href="#wrap1html">HTML</a></li>
-        <li><a href="#wrap2layout">Layout</a></li>
-        <li><a href="#wrap3images">Images</a></li>
-        <li><a href="#wrap5forms">Lists</a></li>
-        <li><a href="#wrap4tables">Tables</a></li>
-        <li><a href="#wrap5forms">Forms</a></li>
-      </ul>
-    </nav>
+    <div class="navWrapper">
+      <button id="menuBtnDiv" alt="Open Mobile Menu"></button>
+      <nav id="mainNav">
+        <ul>
+          <li><a href="#wrap1html">HTML</a></li>
+          <li><a href="#wrap2layout">Layout</a></li>
+          <li><a href="#wrap3images">Images</a></li>
+          <li><a href="#wrap5forms">Lists</a></li>
+          <li><a href="#wrap4tables">Tables</a></li>
+          <li><a href="#wrap5forms">Forms</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <div class="contentWrapper">
@@ -221,8 +224,10 @@
             </div>
           </div>
         </article>
-      </div> <!-- subWrap ends -->
-    </div> <!-- wrap1html ends -->
+      </div>
+      <!-- subWrap ends -->
+    </div>
+    <!-- wrap1html ends -->
 
     <div id="wrap2layout">
       <h2>CSS: Layouts: Floats, Flexbox, CSS Grid</h2>
@@ -231,8 +236,10 @@
           <h3></h3>
 
         </article>
-      </div> <!-- subWrap ends -->
-    </div> <!-- wrap2layout ends -->
+      </div>
+      <!-- subWrap ends -->
+    </div>
+    <!-- wrap2layout ends -->
 
     <!-- <div id="wrap3images">
       <h2>Images </h2>
