--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <h1>Website Coding Basics</h1>
+    <h1 id="mainHeading">Website Coding Basics</h1>
     <div class="navWrapper">
       <button id="menuBtnDiv" alt="Open Mobile Menu"></button>
       <nav id="mainNav">
