Animated the show mobile menu button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
   <header>
     <h1 id="mainHeading">Website Coding Basics</h1>
     <div class="navWrapper">
-      <button id="menuBtnDiv" alt="Open Mobile Menu"></button>
+
+      <div class="icon" id="dIcon">
+        <div id="menuBtnDiv" class="hamMenu" alt="Open Mobile Menu"></div>
+      </div>
+
       <nav id="mainNav">
         <ul>
           <li><a href="#wrap1html">HTML</a></li>
