--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1 id="mainHeading">Website Coding Basics</h1>
     <div class="navWrapper">
 
-      <div id="mobileMenuDiv">
+      <div class="icon" id="dIcon">
         <div id="menuBtnDiv" class="hamMenu" alt="Open Mobile Menu"></div>
       </div>
 
