--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <h1 id="mainHeading">Website Coding Basics</h1>
-    <div class="navWrapper" id="top">
+    <div class="navWrapper inactive " id="top">
 
       <div class="icon" id="mobBtnDiv">
         <div id="menuBtnDiv" class="hamMenu" alt="Open Mobile Menu"></div>
