Some code comments were changed or removed.

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <!-- wrap1html ends -->
 
     <div id="wrap2layout">
-      <h2>CSS: Layouts: Floats, Flexbox, CSS Grid</h2>
+      <h2>CSS Layouts: Floats, Flexbox, CSS Grid</h2>
       <div class="subWrap">
         <article>
           <h3></h3>
