Commiting 2nd machine code conflict

--- a/index.html
+++ b/index.html
@@ -238,6 +238,18 @@
       <div class="subWrap">
         <article>
           <h3></h3>
+          <p>The 1st example shows the default look of divs within a div, without any layout coding.</p>
+          <div class="grid grid_1 bottomMargin">
+            <div>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque ipsum vel quo modi, aperiam rem molestias sapiente. Pariatur, natus.
+            </div>
+            <div>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque ipsum vel quo modi, aperiam rem molestias sapiente. Pariatur, natus.
+            </div>
+            <div>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur cumque ipsum vel quo modi, aperiam rem molestias sapiente. Pariatur, natus.
+            </div>
+          </div>
 
         </article>
       </div>
